--- a/app/src/main/res/layout/my_baozhengjin_act.xml
+++ b/app/src/main/res/layout/my_baozhengjin_act.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -33,9 +34,10 @@
                     android:gravity="center"
                     >
                     <TextView
+                        android:id="@+id/tv_my_baozhengjin_money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0.0"
+                        tools:text="0.0"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         />
@@ -60,9 +62,10 @@
                     android:gravity="center"
                     >
                     <TextView
+                        android:id="@+id/tv_my_baozhengjin_weiyue_money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0.0"
+                        tools:text="0.0"
                         android:textColor="@color/white"
                         android:textSize="16sp"
                         />
@@ -89,6 +92,7 @@
                 android:paddingBottom="12dp"
                 >
                 <com.github.fastshape.MyTextView
+                    android:id="@+id/tv_my_baozhengjin_jiaona"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="45dp"
@@ -102,6 +106,7 @@
                     android:textSize="14sp"
                     />
                 <com.github.fastshape.MyTextView
+                    android:id="@+id/tv_my_baozhengjin_tixian"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="45dp"
@@ -133,12 +138,21 @@
                 android:layout_height="2px"
                 android:background="@color/divider_color"
                 />
-            <com.library.base.view.MyRecyclerView
-                android:id="@+id/rv_baozhengjin"
+            <in.srain.cube.views.ptr.PtrClassicFrameLayout
+                android:id="@id/pcfl_refresh"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                app:ptr_resistance="2.1"
+                app:ptr_ratio_of_header_height_to_refresh="1.2"
                 >
-            </com.library.base.view.MyRecyclerView>
+                <com.library.base.view.MyRecyclerView
+                    android:id="@+id/rv_baozhengjin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+                </com.library.base.view.MyRecyclerView>
+            </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+
         </LinearLayout>
     </com.library.base.ProgressLayout>
 </LinearLayout>
