--- a/app/src/main/res/layout/ti_xian_act.xml
+++ b/app/src/main/res/layout/ti_xian_act.xml
@@ -29,6 +29,7 @@
                 android:paddingRight="10dp"
                 >
                 <TextView
+                    android:id="@+id/tv_tixian_flag"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
