--- a/app/src/main/res/layout/sure_order_popu.xml
+++ b/app/src/main/res/layout/sure_order_popu.xml
@@ -51,14 +51,15 @@
             android:background="@color/white"
             android:layout_marginTop="2px"
             android:text="微信支付"
-            app:checked_drawable="@drawable/qq"
-            app:normal_drawable="@drawable/qq"
+            app:checked_drawable="@drawable/shopping_select"
+            app:normal_drawable="@drawable/shopping_normal"
             app:drawable_direction="right"
             android:button="@drawable/pay_weixin"
             android:gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:paddingLeft="15dp"
             android:paddingRight="10dp"
+            android:checked="true"
             />
         <View
             android:layout_width="match_parent"
@@ -72,9 +73,8 @@
             android:background="@color/white"
             android:layout_marginTop="2px"
             android:text="支付宝支付"
-            android:checked="true"
-            app:checked_drawable="@drawable/qq"
-            app:normal_drawable="@drawable/qq"
+            app:checked_drawable="@drawable/shopping_select"
+            app:normal_drawable="@drawable/shopping_normal"
             app:drawable_direction="right"
             android:button="@drawable/pay_ali"
             android:gravity="center_vertical"
@@ -94,8 +94,8 @@
             android:background="@color/white"
             android:layout_marginTop="2px"
             android:text="余额支付"
-            app:checked_drawable="@drawable/qq"
-            app:normal_drawable="@drawable/qq"
+            app:checked_drawable="@drawable/shopping_select"
+            app:normal_drawable="@drawable/shopping_normal"
             app:drawable_direction="right"
             android:button="@drawable/pay_yue"
             android:gravity="center_vertical"
