--- a/app/src/main/res/layout/pay_success_act.xml
+++ b/app/src/main/res/layout/pay_success_act.xml
@@ -19,12 +19,13 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center"
+            android:gravity="right"
             >
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/qq"
+                android:src="@drawable/pay_result"
+                android:layout_marginRight="30dp"
                 />
         </LinearLayout>
 
