--- a/app/src/main/res/layout/tuikuan_act.xml
+++ b/app/src/main/res/layout/tuikuan_act.xml
@@ -12,6 +12,10 @@
         android:id="@id/pl_load"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
         <android.support.v4.widget.NestedScrollView
                 android:id="@id/nsv"
                 android:layout_width="match_parent"
@@ -169,6 +173,6 @@
             android:layout_alignParentBottom="true"
             android:layout_margin="10dp"
             />
-
+        </RelativeLayout>
     </com.library.base.ProgressLayout>
 </LinearLayout>
