--- a/app/src/main/res/layout/my_evaluation_item.xml
+++ b/app/src/main/res/layout/my_evaluation_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -14,30 +15,35 @@
     android:gravity="center_vertical"
     >
     <com.github.fastshape.MyImageView
+        android:id="@+id/iv_my_evaluation"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/qq"
+        tools:src="@drawable/qq"
         app:clipRadius="20dp"
+        android:scaleType="centerCrop"
         />
     <TextView
+        android:id="@+id/tv_my_evaluation_name"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="李富贵"
+        tools:text="李富贵"
         android:layout_marginLeft="10dp"
         android:textSize="14sp"
         android:textColor="@color/gray_33"
         />
     <TextView
+        android:id="@+id/tv_my_evaluation_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2018/11/11"
+        tools:text="2018/11/11"
         />
 </LinearLayout>
     <TextView
+        android:id="@+id/tv_my_evaluation_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="这是我打磨的过程这是我打磨的过程这是我打磨的过程这是我打磨的过程这是我打磨的过程"
+        tools:text="这是我打磨的过程这是我打磨的过程这是我打磨的过程这是我打磨的过程这是我打磨的过程"
         android:layout_marginTop="10dp"
         />
     <LinearLayout
@@ -49,9 +55,11 @@
         android:background="#FFF5F5F5"
         >
         <ImageView
+            android:id="@+id/iv_my_evaluation_goods"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/qq"
+            tools:src="@drawable/qq"
+            android:scaleType="centerCrop"
             />
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,21 +69,23 @@
             android:paddingRight="10dp"
             >
             <TextView
+                android:id="@+id/tv_my_evaluation_goods_name"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠"
+                tools:text="御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠御见翡翠"
                 android:maxLines="2"
                 android:ellipsize="end"
                 android:layout_gravity="top"
                 android:textColor="@color/gray_33"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:layout_marginTop="10dp"
                 />
             <TextView
+                android:id="@+id/tv_my_evaluation_goods_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="¥234"
+                tools:text="¥234"
                 android:textColor="@color/red"
                 android:textSize="15sp"
                 android:layout_marginBottom="10dp"
@@ -83,9 +93,10 @@
         </LinearLayout>
     </LinearLayout>
     <com.github.fastshape.MyTextView
+        android:id="@+id/tv_my_evaluation_again"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:text="用户感言"
+        android:text="追加评价"
         android:paddingLeft="18dp"
         android:paddingRight="18dp"
         android:gravity="center"
