--- a/app/src/main/res/layout/my_frag.xml
+++ b/app/src/main/res/layout/my_frag.xml
@@ -21,8 +21,14 @@
                 <FrameLayout
                     android:layout_width="match_parent"
                     android:layout_height="160dp"
-                    android:background="@drawable/my_bg"
                     >
+                    <ImageView
+                        android:id="@+id/iv_my_bg"
+                        android:layout_width="match_parent"
+                        android:layout_height="160dp"
+                        android:src="@drawable/my_bg"
+                        android:scaleType="centerCrop"
+                        />
                     <ImageView
                         android:id="@+id/iv_my_setting"
                         android:layout_width="30dp"
@@ -61,18 +67,22 @@
                         android:textColor="@color/white"
                         />
                     <com.github.fastshape.MyTextView
+                        android:id="@+id/tv_my_vip"
                         android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:ems="4"
+                        android:layout_height="32dp"
+                        android:ems="5"
                         android:text="VIP"
-                        android:gravity="center"
-                        app:topLeftRadius="15dp"
-                        app:bottomLeftRadius="15dp"
+                        android:gravity="center_vertical"
+                        app:topLeftRadius="16dp"
+                        app:bottomLeftRadius="16dp"
                         app:borderColor="#FFE0D28F"
                         app:borderWidth="2px"
                         android:layout_gravity="center_vertical|right"
+                        android:drawableLeft="@drawable/vip"
                         android:layout_marginRight="-2dp"
                         android:textColor="#FFE0D28F"
+                        android:paddingLeft="15dp"
+                        android:drawablePadding="10dp"
                         />
                 </FrameLayout>
                 <LinearLayout
