--- a/app/src/main/res/layout/vip_act.xml
+++ b/app/src/main/res/layout/vip_act.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -11,69 +12,171 @@
         android:id="@id/pl_load"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/bg_color"
-            >
-            <!--your view-->
-            <ImageView
+        <android.support.v4.widget.NestedScrollView
+                android:id="@id/nsv"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:src="@drawable/vip_bg"
-                android:scaleType="centerCrop"
-                />
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="wrap_content"
                 >
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="@color/bg_color"
+                >
+                <!--your view-->
                 <ImageView
-                    android:id="@+id/iv_vip_0"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/vip_0"
-                    android:layout_toLeftOf="@+id/sb_vip"
-                    android:layout_centerVertical="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"
+                    android:src="@drawable/vip_bg"
+                    android:scaleType="centerCrop"
                     />
-                <SeekBar
-                    android:id="@+id/sb_vip"
-                    android:layout_width="210dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginLeft="-15dp"
-                    android:layout_centerInParent="true"
-                    android:max="100"
-                    android:progress="100"
-                    android:layout_marginRight="-10dp"
-                    />
-                <ImageView
-                    android:id="@+id/iv_vip_1"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/vip_1"
-                    android:layout_toRightOf="@+id/sb_vip"
-                    android:layout_centerVertical="true"
-                    />
-                <TextView
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    >
+                    <ImageView
+                        android:id="@+id/iv_vip_0"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/vip_0"
+                        android:layout_toLeftOf="@+id/sb_vip"
+                        android:layout_centerVertical="true"
+                        />
+                    <SeekBar
+                        android:id="@+id/sb_vip"
+                        android:layout_width="210dp"
+                        android:layout_height="wrap_content"
+                        android:maxHeight="3dp"
+                        android:minHeight="3dp"
+                        android:layout_marginTop="12dp"
+                        android:layout_centerInParent="true"
+                        android:thumbOffset="0dp"
+                        android:paddingStart="2dp"
+                        android:paddingEnd="2dp"
+                        />
+                    <ImageView
+                        android:id="@+id/iv_vip_1"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/vip_1"
+                        android:layout_toRightOf="@+id/sb_vip"
+                        android:layout_centerVertical="true"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="普通会员"
+                        android:textColor="@color/white"
+                        android:layout_below="@+id/iv_vip_0"
+                        android:layout_alignLeft="@+id/iv_vip_0"
+                        android:layout_marginLeft="-6dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="VIP会员"
+                        android:textColor="#FFE0D28F"
+                        android:layout_below="@+id/iv_vip_1"
+                        android:layout_alignLeft="@+id/iv_vip_1"
+                        android:layout_marginLeft="-3dp"
+                        android:layout_marginTop="10dp"
+                        />
+                </RelativeLayout>
+                <com.github.fastshape.MyTextView
+                    android:id="@+id/tv_vip_shuoming"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="普通会员"
+                    android:layout_height="30dp"
+                    android:text="还需要消费4234元,可升级至VIP会员"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
                     android:textColor="@color/white"
-                    android:layout_below="@+id/iv_vip_0"
-                    android:layout_alignLeft="@+id/iv_vip_0"
+                    android:gravity="center"
+                    app:radius="15dp"
+                    app:solidColor="@color/black"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="30dp"
+                    android:layout_marginTop="150dp"
+                    android:textSize="12sp"
+                    android:layout_gravity="center_horizontal"
                     />
-                <TextView
-                    android:layout_width="wrap_content"
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="VIP会员"
-                    android:textColor="#FFE0D28F"
-                    android:layout_below="@+id/iv_vip_1"
-                    android:layout_alignLeft="@+id/iv_vip_1"
-                    />
-            </RelativeLayout>
+                    app:cardCornerRadius="5dp"
+                    app:cardElevation="4dp"
+                    android:layout_marginTop="205dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginBottom="20dp"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:gravity="center_vertical"
+                        android:background="@color/white"
+                        >
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="42dp"
+                            android:gravity="center"
+                            android:text="等级攻略"
+                            android:textSize="15sp"
+                            android:textColor="@color/black"
+                            />
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="2px"
+                            android:background="@color/divider_color"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="普通会员"
+                            android:paddingLeft="10dp"
+                            android:paddingTop="15dp"
+                            android:paddingBottom="10dp"
+                            android:textSize="14sp"
+                            android:textColor="@color/black"
+                            />
+                        <TextView
+                            android:id="@+id/tv_vip_putong_content"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员"
+                            android:paddingLeft="10dp"
+                            android:paddingBottom="10dp"
+                            android:textColor="@color/gray_66"
+                            />
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="5dp"
+                            android:background="@color/divider_color"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="VIP会员"
+                            android:paddingLeft="10dp"
+                            android:paddingTop="15dp"
+                            android:paddingBottom="10dp"
+                            android:textSize="14sp"
+                            android:textColor="@color/black"
+                            />
+                        <TextView
+                            android:id="@+id/tv_vip_content"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员普通会员"
+                            android:paddingLeft="10dp"
+                            android:paddingBottom="10dp"
+                            android:textColor="@color/gray_66"
+                            />
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
 
-
-        </FrameLayout>
+            </FrameLayout>
+            </android.support.v4.widget.NestedScrollView>
     </com.library.base.ProgressLayout>
 </LinearLayout>
