--- a/app/src/main/res/layout/mall_frag.xml
+++ b/app/src/main/res/layout/mall_frag.xml
@@ -72,6 +72,7 @@
                 app:radius="6dp"
                 app:solidColor="@color/red"
                 tools:text="99"
+                android:visibility="gone"
                 />
         </FrameLayout>
 
