--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="android:textCursorDrawable">@drawable/text_cursor</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:configChanges">screenSize|keyboardHidden|orientation</item>
         <item name="android:textSize">@dimen/app_text_size</item>
         <item name="android:textColor">@color/colorText</item>
         <!--<item name="android:textCursorDrawable">@drawable/cursor_color</item>&lt;!&ndash;光标颜色&ndash;&gt;-->
