--- a/app/src/main/res/layout/goods_search_act.xml
+++ b/app/src/main/res/layout/goods_search_act.xml
@@ -1,12 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/bg_color"
     >
-<include layout="@layout/app_title"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/app_title_height"
+        android:background="@color/app_bar"
+        android:gravity="center_vertical"
+        app:titleTextColor="@color/white"
+        app:layout_collapseMode="pin"
+        >
+        <TextView
+            android:id="@id/app_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/app_title_size"
+            tools:text="title"
+            android:visibility="gone"
+            />
+        <TextView
+            android:id="@id/app_right_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/app_right_title_size"
+            tools:text="right_title"
+            />
+        <com.github.fastshape.MyLinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_gravity="center"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="10dp"
+            app:solidColor="#FF565656"
+            app:radius="15dp"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/search"
+                />
+            <com.zhizhong.yujian.view.MyEditText
+                android:id="@+id/et_search_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textSize="11sp"
+                android:inputType="text"
+                android:imeOptions="actionSearch"
+                app:hiddenClearIcon="true"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:hint="请输入搜索内容"
+                />
+            <ImageButton
+                android:id="@+id/ib_search_scan"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/scan"
+                android:background="@color/transparent"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                />
+        </com.github.fastshape.MyLinearLayout>
+
+
+    </android.support.v7.widget.Toolbar>
     <com.library.base.ProgressLayout
         android:id="@id/pl_load"
         android:layout_width="match_parent"
@@ -28,10 +107,10 @@
                 android:padding="10dp"
                 />
                 <com.github.fastshape.FlowLayout
+                    android:id="@+id/fl_history_search"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     >
 
                 </com.github.fastshape.FlowLayout>
@@ -42,9 +121,10 @@
                 android:textColor="@color/gray_33"
                 android:textSize="14sp"
                 android:padding="10dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 />
             <com.github.fastshape.FlowLayout
+                android:id="@+id/fl_hot_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -75,6 +155,12 @@
                 android:gravity="center"
                 app:radius="22dp"
                 >
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/yuyin"
+                    android:layout_marginRight="5dp"
+                    />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
