--- a/app/src/main/res/layout/goods_search_act.xml
+++ b/app/src/main/res/layout/goods_search_act.xml
@@ -144,6 +144,7 @@
             android:layout_alignParentBottom="true"
             >
             <com.github.fastshape.MyLinearLayout
+                android:id="@+id/ll_goods_search_yuyin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:solidColor="#FFE4E4E4"
