--- a/app/src/main/res/layout/goods_search_act.xml
+++ b/app/src/main/res/layout/goods_search_act.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
@@ -7,89 +7,91 @@
               android:layout_height="match_parent"
               android:background="@color/bg_color"
     >
-    <android.support.v7.widget.Toolbar
-        android:id="@id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_title_height"
-        android:background="@color/app_bar"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:gravity="center_vertical"
-        app:titleTextColor="@color/white"
-        app:layout_collapseMode="pin"
         >
-        <TextView
-            android:id="@id/app_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/white"
-            android:textSize="@dimen/app_title_size"
-            tools:text="title"
-            android:visibility="gone"
-            />
-        <TextView
-            android:id="@id/app_right_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
-            android:maxLines="1"
-            android:textColor="@color/white"
-            android:textSize="@dimen/app_right_title_size"
-            tools:text="right_title"
-            />
-        <com.github.fastshape.MyLinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:layout_height="@dimen/app_title_height"
+            android:background="@color/app_bar"
             android:gravity="center_vertical"
-            android:layout_gravity="center"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="12dp"
-            android:layout_marginTop="8dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="10dp"
-            app:solidColor="#FF565656"
-            app:radius="15dp"
-            android:focusableInTouchMode="true"
-            android:focusable="true"
+            app:titleTextColor="@color/white"
+            app:layout_collapseMode="pin"
             >
-            <ImageView
+            <TextView
+                android:id="@id/app_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/search"
+                android:layout_gravity="center"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/app_title_size"
+                tools:text="title"
+                android:visibility="gone"
                 />
-            <com.zhizhong.yujian.view.MyEditText
-                android:id="@+id/et_search_content"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="11sp"
-                android:inputType="text"
-                android:imeOptions="actionSearch"
-                app:hiddenClearIcon="true"
-                android:paddingLeft="5dp"
-                android:paddingRight="10dp"
-                android:hint="请输入搜索内容"
-                />
-            <ImageButton
-                android:id="@+id/ib_search_scan"
+            <TextView
+                android:id="@id/app_right_tv"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/scan"
-                android:background="@color/transparent"
-                android:paddingLeft="10dp"
-                android:paddingRight="5dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:maxLines="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/app_right_title_size"
+                tools:text="right_title"
                 />
-        </com.github.fastshape.MyLinearLayout>
+            <com.github.fastshape.MyLinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_gravity="center"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="8dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="10dp"
+                app:solidColor="#FF565656"
+                app:radius="15dp"
+                android:focusableInTouchMode="true"
+                android:focusable="true"
+                >
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/search"
+                    />
+                <com.zhizhong.yujian.view.MyEditText
+                    android:id="@+id/et_search_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="11sp"
+                    android:inputType="text"
+                    android:imeOptions="actionSearch"
+                    app:hiddenClearIcon="true"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="10dp"
+                    android:hint="请输入搜索内容"
+                    />
+                <ImageButton
+                    android:id="@+id/ib_search_scan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/scan"
+                    android:background="@color/transparent"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="5dp"
+                    />
+            </com.github.fastshape.MyLinearLayout>
 
 
-    </android.support.v7.widget.Toolbar>
-    <com.library.base.ProgressLayout
-        android:id="@id/pl_load"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        </android.support.v7.widget.Toolbar>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -106,14 +108,14 @@
                 android:textSize="14sp"
                 android:padding="10dp"
                 />
-                <com.github.fastshape.FlowLayout
-                    android:id="@+id/fl_history_search"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    >
+            <com.github.fastshape.FlowLayout
+                android:id="@+id/fl_history_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                >
 
-                </com.github.fastshape.FlowLayout>
+            </com.github.fastshape.FlowLayout>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -134,41 +136,41 @@
             </com.github.fastshape.FlowLayout>
 
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/ll_goods_search_bottom"
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll_goods_search_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:background="#FFF9F9F9"
+        android:layout_alignParentBottom="true"
+        >
+        <com.github.fastshape.MyLinearLayout
+            android:id="@+id/ll_goods_search_yuyin"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:orientation="horizontal"
+            android:layout_height="match_parent"
+            app:solidColor="#FFE4E4E4"
+            app:pressColor="#FFD7D5D5"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="6dp"
             android:gravity="center"
-            android:background="#FFF9F9F9"
-            android:layout_alignParentBottom="true"
+            app:radius="22dp"
             >
-            <com.github.fastshape.MyLinearLayout
-                android:id="@+id/ll_goods_search_yuyin"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:solidColor="#FFE4E4E4"
-                app:pressColor="#FFD7D5D5"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginBottom="6dp"
-                android:gravity="center"
-                app:radius="22dp"
-                >
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/yuyin"
-                    android:layout_marginRight="5dp"
-                    />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="按住说出你要的宝贝"
-                    android:textColor="@color/gray_66"
-                    />
-            </com.github.fastshape.MyLinearLayout>
-        </LinearLayout>
-    </com.library.base.ProgressLayout>
-</LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/yuyin"
+                android:layout_marginRight="5dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="按住说出你要的宝贝"
+                android:textColor="@color/gray_66"
+                />
+        </com.github.fastshape.MyLinearLayout>
+    </LinearLayout>
+</RelativeLayout>
