--- a/app/src/main/res/layout/setting_act.xml
+++ b/app/src/main/res/layout/setting_act.xml
@@ -155,7 +155,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Copyright © 2018\n 公司版权所有"
+                android:text="Copyright © 2018\n 上海如御珠宝有限公司版权所有"
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
