--- a/kefu-easeui/src/main/res/values/hd_colors.xml
+++ b/kefu-easeui/src/main/res/values/hd_colors.xml
@@ -3,7 +3,7 @@
 
     <color name="common_botton_bar_blue">#2ea7e0</color>
     <color name="common_bg">#fcfcfc</color>
-    <color name="top_bar_normal_bg">#2DDB97</color>
+    <color name="top_bar_normal_bg">#FF353535</color>
     <color name="btn_gray_normal">#c0c0c0</color>
     <color name="btn_gray_pressed_status">#b5b5b6</color>
     <color name="btn_blue_normal">#1e90ff</color>
