--- a/app/src/main/res/layout/goods_detail_act.xml
+++ b/app/src/main/res/layout/goods_detail_act.xml
@@ -473,6 +473,7 @@
                     app:radius="6dp"
                     app:solidColor="@color/red"
                     tools:text="99"
+                    android:visibility="gone"
                     />
             </FrameLayout>
             <ImageView
