--- a/app/src/main/res/layout/auction_detail_act.xml
+++ b/app/src/main/res/layout/auction_detail_act.xml
@@ -87,7 +87,7 @@
                         android:id="@+id/tv_paimai_goods_detail_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0元拍"
+                        android:text="0元起拍"
                         android:textColor="@color/red"
                         app:borderColor="@color/red"
                         app:borderWidth="2px"
