--- a/app/src/main/res/layout/auction_include.xml
+++ b/app/src/main/res/layout/auction_include.xml
@@ -50,7 +50,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0元拍"
+                            android:text="0元起拍"
                             android:textColor="@color/gray_66"
                             />
 
