--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -21,7 +21,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+
                 <com.github.fastshape.MyRelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -161,20 +169,6 @@
                     android:layout_height="5dp"
                     android:background="#FFF3F4F6"
                     />
-                <com.github.fastshape.MyImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:src="@drawable/qq"
-                    app:clipRadius="5dp"
-                    android:layout_margin="10dp"
-                    android:visibility="gone"
-                    />
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="5dp"
-                    android:background="#FFF3F4F6"
-                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
@@ -192,8 +186,10 @@
                         android:textColor="@color/gray_33"
                         />
                     <TextView
+                        android:id="@+id/tv_home_more"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
                         android:text="查看更多"
                         />
                 </LinearLayout>
@@ -206,9 +202,15 @@
                     android:id="@+id/rv_home_tuijian_goods"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     >
-
                 </android.support.v7.widget.RecyclerView>
+
+
+                </LinearLayout>
+
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="5dp"
@@ -237,16 +239,18 @@
                 </com.library.base.view.MyRecyclerView>
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
-        <com.github.fastshape.MyTextView
+        <ImageButton
+            android:id="@+id/ib_home_top"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="顶部"
-            app:radius="25dp"
             android:gravity="center"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="80dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginBottom="60dp"
+            android:layout_marginRight="12dp"
+            android:src="@drawable/home_top"
+            android:background="@color/transparent"
             />
     </com.library.base.ProgressLayout>
 </LinearLayout>
