--- a/app/src/main/res/layout/zixun_item.xml
+++ b/app/src/main/res/layout/zixun_item.xml
@@ -3,6 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              xmlns:tools="http://schemas.android.com/tools"
               android:background="@color/bg_color"
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
@@ -10,10 +11,12 @@
               android:paddingBottom="14dp"
     >
     <com.github.fastshape.MyImageView
+        android:id="@+id/iv_zixun"
         android:layout_width="110dp"
-        android:layout_height="80dp"
-        android:src="@drawable/qq"
+        android:layout_height="83dp"
+        tools:src="@drawable/qq"
         app:clipRadius="5dp"
+        android:scaleType="centerCrop"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,19 +26,21 @@
         android:layout_marginLeft="20dp"
         >
         <TextView
+            android:id="@+id/tv_zixun_title"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="如何辨别真玉如何辨别真玉如何辨别真玉如何辨别真玉"
+            tools:text="如何辨别真玉如何辨别真玉如何辨别真玉如何辨别真玉"
             android:maxLines="2"
             android:ellipsize="end"
             android:textSize="14sp"
             android:textColor="@color/gray_33"
             />
         <TextView
+            android:id="@+id/tv_zixun_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2018-09-09"
+            tools:text="2018-09-09"
             android:textSize="12sp"
             />
     </LinearLayout>
